--- a/index.html
+++ b/index.html
@@ -18,20 +18,8 @@
 -->
 
    <head>
-      <title>Floppy Bird</title>
-      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <meta name="author" content="Nebez Briefkani" />
-      <meta name="description" content="play floppy bird. a remake of popular game flappy bird using just html/css/js" />
-      <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource" />
+      <title>Flappy Pony</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-
-      <!-- Open Graph tags -->
-      <meta property="og:title" content="Floppy Bird" />
-      <meta property="og:description" content="play floppy bird. a remake of popular game flappy bird using just html/css/js" />
-      <meta property="og:type" content="website" />
-      <meta property="og:image" content="http://nebez.github.io/floppybird/assets/thumb.png" />
-      <meta property="og:url" content="http://nebez.github.io/floppybird/" />
-      <meta property="og:site_name" content="Floppy Bird" />
 
       <!-- Style sheets -->
       <link href="css/reset.css" rel="stylesheet">
@@ -68,10 +56,11 @@
             <div id="land" class="animated"><div id="debug"></div></div>
          </div>
       </div>
+      <div class="game-wrapper">
+        <canvas height="420px" width="1280px"></canvas>
+      </div>
       <div id="footer">
          <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
-         <a href="http://nebezb.com/">recreated by nebez briefkani</a>
-         <a href="http://github.com/nebez/floppybird/">view github project</a>
       </div>
       <div class="boundingbox" id="playerbox"></div>
       <div class="boundingbox" id="pipebox"></div>
@@ -79,6 +68,7 @@
       <script src="js/jquery.min.js"></script>
       <script src="js/jquery.transit.min.js"></script>
       <script src="js/buzz.min.js"></script>
+      <script src="js/player.js"></script>
       <script src="js/main.js"></script>
    </body>
 </html>
