--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <script src="js/jquery.transit.min.js"></script>
       <script src="js/buzz.min.js"></script>
       <script src="js/player.js"></script>
+      <script src="js/coin.js"></script>
       <script src="js/main.js"></script>
    </body>
 </html>
