Re writing to work with canvas

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <div id="land" class="animated"><div id="debug"></div></div>
          </div>
       </div>
-      <div class="game-wrapper">
-        <canvas height="420px" width="1280px"></canvas>
+      <div class="game-wrapper" style="position: relative">
+        <canvas height="620" width="1280"></canvas>
+        <div class="boundingbox" id="playerbox"></div>
+        <div class="boundingbox" id="pipebox"></div>
       </div>
       <div id="footer">
          <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
       </div>
-      <div class="boundingbox" id="playerbox"></div>
-      <div class="boundingbox" id="pipebox"></div>
 
       <script src="js/jquery.min.js"></script>
       <script src="js/jquery.transit.min.js"></script>
