--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          </div>
       </div>
       <div class="game-wrapper" style="position: relative">
-        <canvas height="620" width="1280"></canvas>
+        <canvas height="420" width="1280"></canvas>
         <div class="boundingbox" id="playerbox"></div>
         <div class="boundingbox" id="pipebox"></div>
       </div>
@@ -68,6 +68,7 @@
       <script src="js/jquery.min.js"></script>
       <script src="js/jquery.transit.min.js"></script>
       <script src="js/buzz.min.js"></script>
+      <script src="js/bigScore.js"></script>
       <script src="js/player.js"></script>
       <script src="js/coin.js"></script>
       <script src="js/main.js"></script>
