--- a/index.html
+++ b/index.html
@@ -1,76 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
-   Copyright 2014 Nebez Briefkani
-   floppybird - index.html
+  <head>
+    <title>Flappy Pony</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
+    <!-- Style sheets -->
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="pony pony-1"></div>
+    <div class="pony pony-2"></div>
+    <div class="pony pony-3"></div>
+    <div class="pony pony-4"></div>
+    <div class="pony pony-5"></div>
+    <div id="gamecontainer">
+      <div id="gamescreen">
+        <div id="sky" class="animated">
+          <div id="flyarea">
+            <div id="ceiling" class="animated"></div>
+            <!-- This is the flying and pipe area container -->
+            <div id="player" class="bird animated"></div>
 
-       http://www.apache.org/licenses/LICENSE-2.0
+            <div id="bigscore"></div>
 
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
+            <div id="splash"></div>
 
-   <head>
-      <title>Flappy Pony</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-
-      <!-- Style sheets -->
-      <link href="css/reset.css" rel="stylesheet">
-      <link href="css/main.css" rel="stylesheet">
-   </head>
-   <body>
-      <div class="pony pony-1"></div>
-      <div class="pony pony-2"></div>
-      <div class="pony pony-3"></div>
-      <div class="pony pony-4"></div>
-      <div class="pony pony-5"></div>
-      <div id="gamecontainer">
-         <div id="gamescreen">
-            <div id="sky" class="animated">
-               <div id="flyarea">
-                  <div id="ceiling" class="animated"></div>
-                  <!-- This is the flying and pipe area container -->
-                  <div id="player" class="bird animated"></div>
-
-                  <div id="bigscore"></div>
-
-                  <div id="splash"></div>
-
-                  <div id="scoreboard">
-                     <div id="medal"></div>
-                     <div id="currentscore"></div>
-                     <div id="highscore"></div>
-                     <div id="replay"><img src="assets/replay.png" alt="replay"></div>
-                  </div>
-
-                  <!-- Pipes go here! -->
-               </div>
+            <div id="scoreboard">
+              <div id="medal"></div>
+              <div id="currentscore"></div>
+              <div id="highscore"></div>
+              <div id="replay"><img src="assets/replay.png" alt="replay"></div>
             </div>
-            <div id="land" class="animated"><div id="debug"></div></div>
-         </div>
-      </div>
-      <div class="game-wrapper" style="position: relative">
-        <canvas height="420" width="1280"></canvas>
-        <div class="boundingbox" id="playerbox"></div>
-        <div class="boundingbox" id="pipebox"></div>
-      </div>
-      <div id="footer">
-         <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
-      </div>
 
-      <script src="js/jquery.min.js"></script>
-      <script src="js/jquery.transit.min.js"></script>
-      <script src="js/buzz.min.js"></script>
-      <script src="js/bigScore.js"></script>
-      <script src="js/player.js"></script>
-      <script src="js/coin.js"></script>
-      <script src="js/main.js"></script>
-   </body>
+            <!-- Pipes go here! -->
+          </div>
+        </div>
+        <div id="land" class="animated"><div id="debug"></div></div>
+      </div>
+    </div>
+    <div class="game-wrapper" style="position: relative">
+      <canvas height="420" width="1280"></canvas>
+      <div class="boundingbox" id="playerbox"></div>
+      <div class="boundingbox" id="pipebox"></div>
+    </div>
+    <div id="footer">
+       <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.transit.min.js"></script>
+    <script src="js/buzz.min.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/bigScore.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/coin.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
