Improved performance by only creating background patterns once.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
     </div>
 
+    <script src="js/bluebird.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.transit.min.js"></script>
     <script src="js/buzz.min.js"></script>
